syntax = "proto3";

package helloworld;

service Greeter {
  // unary call
  rpc SayHello(HelloRequest) returns (HelloReply);
  // server streaming call
  rpc SayRepeatHello(RepeatHelloRequest) returns (stream HelloReply);
}

message HelloRequest { string name = 1; }

message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}

message HelloReply { string message = 1; }